frontend/tests/cases/negative/polymorphism/adt.gr
data Maybe a where
  None : Maybe a;
  Some : a → Maybe a

data Bad where
  Yuck : Maybe → Bad
